# stm32-clean-setup

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  openocd.cfg  stm32f722_project.elf  stm32f722_project.hex
.cache/clangd/index/: cmsis_compiler.h.645AD4DFA8B6F3F7.idx  cmsis_gcc.h.027DC63D6F5C2254.idx  cmsis_version.h.26E92E97D09EC6E4.idx  core_cm7.h.E15D2C5C72FEFAB7.idx  main.c.5B35DC221E2D257D.idx  mpu_armv7.h.70FC53D2952E4BB6.idx  stm32f722xx.h.07A7B3E52CC3BE9F.idx  stm32f7xx.h.916A47FEE47D02ED.idx  system_stm32f7xx.c.8A15CAAC7D29793C.idx  system_stm32f7xx.h.504A296589CE1605.idx
src/: main.c  startup_stm32f722ze.s  stm32f722ze.ld
